# steward

./: .gitignore  CHANGELOG.md  brief.md  design.md  package-lock.json  package.json  tsconfig.json
python/: README.md  pyproject.toml
python/steward/: __init__.py  batcher.py  credentials.py  journal.py  principles_gate.py  promoter.py  ranker.py  redactor.py  replay.py  rules.py  triage.py  tui.py  verifier.py
python/steward/browser/: harness.py  redactor.py  subagent.py
python/steward/calendar/: fake.py  subagent.py
python/steward/executor/: __main__.py  planner_client.py  server.py
python/steward/gmail/: fake.py  oauth.py  provider.py  real.py  subagent.py
python/steward/payments/: fake.py  limits.py  subagent.py
python/steward/planner/: __init__.py  __main__.py
python/tests/: conftest.py  test_batcher.py  test_browser_authenticated_subagent.py  test_browser_harness.py  test_browser_redactor.py  test_browser_subagent.py  test_calendar_fake.py  test_calendar_subagent.py  test_credentials.py  test_e2e_slice_002.py  test_e2e_slice_003_004.py  test_e2e_slice_005.py  test_e2e_slice_006_007.py  test_e2e_slice_008_009.py  test_e2e_slice_010.py  test_e2e_slice_011_012.py  test_e2e_slice_013_014.py  test_e2e_slice_015.py  test_e2e_slice_016.py  test_e2e_slice_017.py  test_gmail_real.py  test_gmail_subagent.py  test_journal.py  test_payments_fake.py  test_payments_limits.py  test_payments_subagent.py  test_principles_gate.py  test_promoter.py  test_ranker.py  test_redactor.py  test_replay.py  test_rules.py  test_smoke.py  test_triage.py  test_verifier.py
(+55 files in other folders)
