[project]
name = "steward"
version = "0.0.0"
description = "Personal AI agent for life admin — Python port"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "websockets>=13.0",
    "google-api-python-client>=2.140",
    "google-auth>=2.33",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
steward-executor = "steward.executor.__main__:main"
steward-planner = "steward.planner.__main__:main"
steward-tui = "steward.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steward"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
